--- a/E Voting System.vcxproj.filters
+++ b/E Voting System.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClInclude Include="LOCAL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PROVINCIAL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NATIONAL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ADMINISTRATOR.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="login.cpp">
@@ -42,6 +51,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LOCAL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PROVINCIAL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NATIONAL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ADMINISTRATOR.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
